--- a/client/stylesheets/shared/_embed.scss
+++ b/client/stylesheets/shared/_embed.scss
@@ -15,15 +15,7 @@
 	}
 
 	#woocommerce-embedded-root.is-embed-loading + #wpbody .wrap {
-		padding-top: $large-header-height + 40;
-
-		@include breakpoint( '782px-960px' ) {
-			padding-top: $medium-header-height + 40;
-		}
-
-		@include breakpoint( '<782px' ) {
-			padding-top: 30px;
-		}
+		padding-top: 12px;
 	}
 
 	#screen-meta,
@@ -71,15 +63,6 @@
 
 	.woocommerce-layout__primary {
 		margin: 0;
-		padding-top: $large-header-height + 20;
-
-		@include breakpoint( '782px-960px' ) {
-			padding-top: $medium-header-height + 20;
-		}
-
-		@include breakpoint( '<782px' ) {
-			padding-top: 10px;
-		}
 	}
 
 	@keyframes isLoaded {
